--- a/ReactMaps/ios/ReactMaps/Info.plist
+++ b/ReactMaps/ios/ReactMaps/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>ReactMaps</string>
+	<string>Nature Calls</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
